@@ -12,7 +12,7 @@ test tests: $(top_builddir)/libxslt/xsltproc
 	@(rm -f .memdump ; touch .memdump)
 	@($(top_builddir)/libxslt/xsltproc -timing -v xmlspec.xsl REC-xml-20001006.xml > REC-xml-20001006.html 2> debug ; \
 	grep implemented debug | sort | uniq -c ; \
-	grep "ms$$" debug ; \
+	grep " ms$$" debug ; \
 	grep "MORY ALLO" .memdump  | grep -v "MEMORY ALLOCATED : 0";\
 	rm -f doc.res)
 
